--- a/app/views/search/calendar.html.erb
+++ b/app/views/search/calendar.html.erb
@@ -4,14 +4,12 @@
   <br>
   <% @lista.each do |registro| %>
     <% if registro.job_entry.to_date == date %>
-      <%= registro.job_entry.strftime("%I:%M:%S %p") %>
-      <br>
-      <%= registro.job_exit ? registro.job_exit.strftime("%I:%M:%S %p") : "Sigue trabajando" %>
-      <br>
-      <%= registro.daily_hours ? "Hrs trabajadas : " + (registro.daily_hours.to_i).to_s : "" %>
-      <% horas_al_mes = horas_al_mes + registro.daily_hours.to_i %>
+      <%= registro.job_entry.strftime("%I:%M:%S %p") %><br>
+      <%= registro.job_exit ? registro.job_exit.strftime("%I:%M:%S %p") : "Sigue trabajando" %><br>
+      <%= registro.daily_hours ? "Hrs trabajadas : " + registro.daily_hours.round(2).to_s : "" %>
+      <% horas_al_mes = horas_al_mes + registro.daily_hours.to_f %>
     <% end %>
   <% end %>
 <% end %>
 
-<h2>Mensual: <%= horas_al_mes %> Horas</h2>
+<h2>Mensual: <%= horas_al_mes.round(2) %> Horas</h2>
