Validacion al registrar entrada y salida

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,2 +1,2 @@
-<h2>El registro de marcación fue exitoso.</h2>
-<%= link_to 'Retroceder', '/records/new', class: "btn btn-danger" %>
+<h2 id="notice"><%= notice %></h2>
+<%= link_to 'Retroceder', '/records/new', class: "btn btn-primary" %>
