--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -14,19 +14,22 @@
             <table id="tablaEmpleados" class="table table-bordered" width="100%">
                 <thead>
                     <tr>
-                        <th>#</th>
+                        <th class = "text-center">#</th>
                         <th>Nombre / Apellido</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
                     </tr>
                 </thead>
 
                 <tbody>
                 <% @empleados.each do |e| %>
                     <tr id = "empleado_<%= e.id %>">
-                        <td><%= e.id %></td>
+                        <td class = "text-center"><%= e.id %></td>
                         <td><%= e.nombre + ", " + e.apellido %></td>
-                        <td><%= link_to "Calendario", searchInCalendar_path(:id => e.id), html_options = {class: "btn btn-primary"} %></td>
-                        <td><%= link_to "editar", edit_employee_path(e), html_options = {class: "btn btn-info btn-xs", remote: true} %></td>
-                        <td><%= link_to 'borrar', e, remote: true, method: :delete, data: {confirm: "¿Eliminar empleado: #{e.nombre}?"}, class: "btn btn-danger btn-xs"%></td>
+                        <td class = "text-center"><%= link_to "Calendario", searchInCalendar_path(:id => e.id), html_options = {class: "btn btn-primary"} %></td>
+                        <td class = "text-center"><%= link_to "editar", edit_employee_path(e), html_options = {class: "btn btn-info btn-xs", remote: true} %></td>
+                        <td class = "text-center"><%= link_to 'borrar', e, remote: true, method: :delete, data: {confirm: "¿Eliminar empleado: #{e.nombre}?"}, class: "btn btn-danger btn-xs"%></td>
                     </tr>
                 <% end %>
                 </tbody>
