--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -4,18 +4,21 @@
     <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
     <%= link_to t('simple_calendar.next', default: 'Siguiente'), calendar.url_for_next_view %>
   </div>
+  
+  <% comienzo_fecha = params.fetch(:start_date, Date.today).to_date %>
+  <% rango_fecha = (comienzo_fecha.beginning_of_month..comienzo_fecha.end_of_month).to_a %>
 
   <table class="table table-striped">
     <thead>
       <tr>
-        <% date_range.slice(0, 7).each do |day| %>
+        <% rango_fecha.slice(0, 7).each do |day| %>
           <th><%= t('date.abbr_day_names')[day.wday] %></th>
         <% end %>
       </tr>
     </thead>
 
     <tbody>
-      <% date_range.each_slice(7) do |week| %>
+      <% rango_fecha.each_slice(7) do |week| %>
         <tr>
           <% week.each do |day| %>
             <%= content_tag :td, class: calendar.td_classes_for(day) do %>
