--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,12 @@
                 <span>Empleados</span>
             <% end %>
         </li>
+        <li class="nav-item">
+            <%= link_to report_path, class: "nav-link" do %>
+                <i class="far fa-file-alt"></i>
+                <span>Reporte</span>
+            <% end %>
+        </li>
       </ul>
       
       <!-- Nav Item - Pages Collapse Menu -->
