--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,32 +1,45 @@
-<%= form_for :record, url: records_path do |f| %>
-  <br><br>
-  <div class="card">
-    <div class="card-body">
-      <div class="item form-group">
-        <%= f.label :tipo, "Tipo de marcación" %>
-        <div class="input-group">
-          <%= f.select(:tipo, options_for_select([['Entrada', 'entrada'], ['Salida', 'salida']]), html_options = { class: "form-select" }) %>
-        </div>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <%= form_for :record, url: records_path do |f| %>
+        <br><br>
+        <div class="card">
+          <div class="card-header">
+            <h2 class = "text-center">Marcación Entrada / Salida</h2>
+          </div>
+          <div class="card-body">
+            <div class="item form-group">
+              <%= f.label :tipo, "Tipo de marcación" %>
+              <div class="input-group">
+                <%= f.select(:tipo, options_for_select([['Entrada', 'entrada'], ['Salida', 'salida']]), options = {}, html_options = { class: "form-control" }) %>
+              </div>
+            </div>
 
-      <div class="item form-group">
-        <%= f.label :fecha, "Fecha" %>
-        <div class="form-group">
-          <%= f.datetime_local_field :fecha, {:class=> "form-control"} %>
-        </div>
-      </div>
+            <div class="item form-group">
+              <%= f.label :fecha, "Fecha" %>
+              <div class="form-group">
+                <%= f.datetime_local_field :fecha, {:class=> "form-control"} %>
+              </div>
+            </div>
 
-      <div class="item form-group">
-        <%= f.label :codigo, "Ingresa tu código de Empleado" %>
-        <div class="input-group">
-          <%= f.text_field :codigo, {:class=> "form-control"} %>
-        </div>
-      </div>
+            <div class="item form-group">
+              <%= f.label :codigo, "Ingresa tu código de Empleado" %>
+              <div class="input-group">
+                <%= f.text_field :codigo, {:class=> "form-control"} %>
+              </div>
+            </div>
 
-      <div class="actions col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-        <%= f.submit "Guardar", :class => "btn btn-success"%>
-      </div>
+            <div class="item form-group">
+              <%= f.submit "Guardar", :class => "btn btn-success col-md-12"%>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    
+    
     </div>
   </div>
-<% end %>
+</div>
+
 
