Solucion de duplicacion de archivos

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -16,13 +16,8 @@
                     <tr>                        
                         <td class = "text-center"><%= d.id %></td>
                         <td><%= d.name_file %></td>
-                        <td>
-                            <% if d.file.attached? %>
-                                <%= link_to "Descargar Reporte", url_for(d.file) %></td>
-                            <% else %>
-                                ----------------------
-                            <% end %>
-                        </tr>  
+                        <td><%= link_to "Descargar Reporte", url_for(d.file) %></td>
+                    </tr>  
                     <% end %>
                 </tbody>
             </table>
